- fixed variable font issue on iPhone

--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -6,8 +6,8 @@ html, body {
     width: 100%;
     padding: 0;
     margin: 0;
-    -web-text-size-adjust: 100%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 a {
@@ -71,8 +71,14 @@ footer {
     top: -80px;
 }
 
+.header-down {
+}
+
 .section-ids-up {
     margin-top: 0px;
+}
+
+.sections-ids-down {
 }
 
 article,
@@ -126,7 +132,7 @@ aside {
     box-orient: vertical;
     box-ordinal-group: 3;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 0.9em;
     line-height: 1.4em;
     background-color: white;
     overflow: hidden;
