--- a/public/stylesheets/typeahead_style.css
+++ b/public/stylesheets/typeahead_style.css
@@ -77,6 +77,7 @@
     white-space: nowrap;
     line-height: 0.4em;
     padding-left: 0.5em;
+    -webkit-text-size-adjust: 100%;
 }
 
 /*Added to suggestion element when menu cursor moves to said suggestion*/
